se corrige el espacio en blanco que se generaba a la derecha, quitando el scroll vetrical

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@
     --color-boton-principal:rgb(0,190,201);
     --titulos-principales: 
 }
+html {
+    overflow-x: hidden;
+}
 
 @font-face {
     font-family: 'Poppins-Medium';
