--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,7 @@ ul{
 .botones{
     display: inline-flex;
     padding: .5em 0;
+    align-items: center;
 }
 
 .botones>button{
@@ -133,4 +134,32 @@ ul{
     font-size: 1.5rem;
     padding: 2em;
     font-family: var(--tipo-de-letra);
+}
+
+.contenido-der-impar{
+    display: flex;
+    align-items: flex-end;
+}
+
+.contenido-der-impar>iframe{
+    padding: 34px;
+}
+
+.cuadrado-decorativo{
+    width: 14em;
+    height: 12em;
+    background-color: var(--fondo-articulos-impares);
+    position:absolute;
+    z-index: -1;
+    
+}
+
+.boton-primario-impar{
+    border: 0;
+    background: var(--fondo-articulos-impares);
+    width: 15rem;
+    height: 5rem;
+    color: var(--color-en-amarillo);
+    padding: 8px;
+    border-radius: .5em;
 }
