--- a/styles.css
+++ b/styles.css
@@ -286,3 +286,42 @@ align-items: center;
 .icono{
     width: 34px;
 }
+
+/* estilos septima seccion */
+.banner{
+    background-image: linear-gradient(
+        rgba(252,195,0,0.8),
+        rgba(252,195,0,0.8)), 
+        url(img/background-section.webp);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size:cover;
+    width: 100%;
+    height: 60%;
+    display: flex;
+    justify-content: center;
+    gap: 18em;
+}
+
+.contenedor-items{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: var(--color-en-amarillo);
+    font-size: xx-large;
+    font-family: var(--tipo-de-letra);
+
+}
+
+.contenedor-items > img{
+    width: 130px;
+    padding: 0.5em;
+}
+
+.contenedor-items > p {
+    font-size: 2.5rem;
+}
+
+.contenedor-items > h2{
+    margin-top: -0.5em;
+}
